@@ -238,6 +238,7 @@
                             - Added new rarity types (green for uncommon and blue for rare) and kept old ones under legacy names<br>
                             - Added icons for the Freddy rework chapter, Kaneki chapter, Blood Moon event, and Orela Rose chapter<br>
                             - Improved and added more features to the icon creator tab<br>
+                            - Fixed font issues across different browsers<br>
                             - Improved mobile styling on all pages<br>
                             - Squashed many bugs!<br><br>
                             - I wanted to take this time to thank everyone that has used the website, reported feedback, and suggested improvements. I greatly appreciate it :) <br>
